# ReplaceText

./: CONTRIBUTING.md  README.md  example_config.json  index.html  pyproject.toml
.github/workflows/: ci.yml
replace_text/: __init__.py  replace_text.py
replace_text/tests/: test_replace_text.py
